Adding my name to title

--- a/scheduling-app/index.html
+++ b/scheduling-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <title>Scheduling App</title>
+    <title>peterwells Scheduling App</title>
 
     <!-- Bootstrap css -->
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
@@ -17,7 +17,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col'>
-          <h1>MaxPhilips Scheduling App</h1>
+          <h1>Peter's Scheduling App</h1>
         </div>
       </div>
       
