--- a/scheduling-app/launch.html
+++ b/scheduling-app/launch.html
@@ -26,8 +26,8 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '1e569428-9e38-4770-ac39-10ac05f826e1',
-        'scope': 'user/Appointment.write user/Patient.read user/Patient.write user/Slot.read launch online_access openid profile'
+        'client_id': '1905940f-fd54-4c2f-9cbb-db87b76bcee1',
+        'scope': 'user/Appointment.write user/Appointment.read user/Patient.read user/Patient.write user/Slot.read launch online_access openid profile'
       });
     </script>
 
